// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CLI utils #swaggerInlineExample should support \`.coffee\` 1`] = `
"  [36m###[39m
  [36m@oas [get] /pet/{petId}[39m
  [36mdescription: Returns all pets from the system that the user has access to[39m
  [36mparameters:[39m
  [36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m###[39m
  [90mroute.get '/pet/:petId', pet.show[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.go\` 1`] = `
"  [36m/*[39m
  [36m * [39m[36m@oas [get] /pet/{petId}[39m
  [36m * [39m[36mdescription: Returns all pets from the system that the user has access to[39m
  [36m * [39m[36mparameters:[39m
  [36m * [39m[36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m * [39m[36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m */[39m
  [90mfunc getPet(id) {[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.java\` 1`] = `
"  [36m/*[39m
  [36m * [39m[36m@oas [get] /pet/{petId}[39m
  [36m * [39m[36mdescription: Returns all pets from the system that the user has access to[39m
  [36m * [39m[36mparameters:[39m
  [36m * [39m[36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m * [39m[36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m */[39m
  [90mpublic String getPet(id) {[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.js\` 1`] = `
"  [36m/*[39m
  [36m * [39m[36m@oas [get] /pet/{petId}[39m
  [36m * [39m[36mdescription: Returns all pets from the system that the user has access to[39m
  [36m * [39m[36mparameters:[39m
  [36m * [39m[36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m * [39m[36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m */[39m
  [90mroute.get(\\"/pet/:petId\\", pet.show);[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.jsx\` 1`] = `
"  [36m/*[39m
  [36m * [39m[36m@oas [get] /pet/{petId}[39m
  [36m * [39m[36mdescription: Returns all pets from the system that the user has access to[39m
  [36m * [39m[36mparameters:[39m
  [36m * [39m[36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m * [39m[36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m */[39m
  [90mroute.get(\\"/pet/:petId\\", pet.show);[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.php\` 1`] = `
"  [36m/*[39m
  [36m * [39m[36m@oas [get] /pet/{petId}[39m
  [36m * [39m[36mdescription: Returns all pets from the system that the user has access to[39m
  [36m * [39m[36mparameters:[39m
  [36m * [39m[36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m * [39m[36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m */[39m
  [90mfunction showPet($id) {[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.py\` 1`] = `
"  [36m\\"\\"\\"[39m
  [36m@oas [get] /pet/{petId}[39m
  [36mdescription: Returns all pets from the system that the user has access to[39m
  [36mparameters:[39m
  [36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m\\"\\"\\"[39m
  [90mdef getPet(id):[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.rb\` 1`] = `
"  [36m=begin[39m
  [36m@oas [get] /pet/{petId}[39m
  [36mdescription: Returns all pets from the system that the user has access to[39m
  [36mparameters:[39m
  [36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m=end[39m
  [90mget '/pet/:petId' do[39m"
`;

exports[`CLI utils #swaggerInlineExample should support \`.ts\` 1`] = `
"  [36m/*[39m
  [36m * [39m[36m@oas [get] /pet/{petId}[39m
  [36m * [39m[36mdescription: Returns all pets from the system that the user has access to[39m
  [36m * [39m[36mparameters:[39m
  [36m * [39m[36m  - (path) petId=2* {Integer} The pet ID[39m
  [36m * [39m[36m  - (query) limit {Integer:int32} The number of resources to return[39m
  [36m */[39m
  [90mroute.get(\\"/pet/:petId\\", pet.show);[39m"
`;
